# tik-cli

./: Cargo.toml  LICENSE  README.md
src/: claim.rs  conf.rs  main.rs  mine.rs  register.rs  rewards.rs
